# LynxTrader

./: .gitignore  FRONTEND_INTEGRATION.md  README.md  SHORTING_STRATEGIES.md  deploy.sh
ai-modules/: BACKTESTING_GUIDE.md  BACKTESTING_SUMMARY.md  STRATEGY_TESTING_SUMMARY.md  TENSORBOARD_README.md  backtest_engine.py  demo_tensorboard.py  enhanced_tensorboard.py  generate_demo_data.py  model_trainer.py  python_ai_test_report.json  requirements.txt  run_backtest.py  shorting_signals.py  simple_backtest.py  start_tensorboard.py  strategy_test_report.json  strategy_tester.py  tb_monitor.py  tensorboard_config.json  tensorboard_config.py  tensorboard_layout.json  tensorboard_monitor.py  test_strategies.py
ai-modules/tensorboard_logs/backtest_20250611_112925/: events.out.tfevents.1749666565.MacBook-Air.local.20699.1
ai-modules/tensorboard_logs/demo/lynxtrader_20250611_071321/: events.out.tfevents.1749651201.MacBook-Air.local.94913.0
ai-modules/tensorboard_logs/demo/lynxtrader_20250611_071345/: events.out.tfevents.1749651225.MacBook-Air.local.95053.0
ai-modules/tensorboard_logs/enhanced/lynxtrader_20250611_112925/: events.out.tfevents.1749666565.MacBook-Air.local.20699.0
ai-modules/tensorboard_logs/live_demo/: events.out.tfevents.1749651625.MacBook-Air.local.98093.0
ai-modules/tensorboard_logs/simple_backtest_20250611_111220/: events.out.tfevents.1749665540.MacBook-Air.local.15042.0
ai-modules/tensorboard_logs/simple_backtest_20250611_111314/: events.out.tfevents.1749665594.MacBook-Air.local.15377.0
ai-modules/tensorboard_logs/simple_backtest_20250611_112755/: events.out.tfevents.1749666475.MacBook-Air.local.20146.0
ai-modules/tensorboard_logs/simple_backtest_20250611_112901/: events.out.tfevents.1749666541.MacBook-Air.local.20546.0
ai-modules/tensorboard_logs/simple_backtest_20250611_112904/: events.out.tfevents.1749666544.MacBook-Air.local.20546.1
ai-modules/tensorboard_logs/simple_backtest_20250611_112938/: events.out.tfevents.1749666578.MacBook-Air.local.20788.0
ai-modules/test_logs/: events.out.tfevents.1749651903.MacBook-Air.local.234.0
assets/: README.md
backend/: Cargo.toml  api_server.py  start_api.py
backend/src/: alpaca_client.rs  main.rs  models.rs  order_executor.rs  risk_manager.rs  trade_signal_router.rs  websocket.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BacktestResults.tsx  BacktestRunner.tsx  Backtesting.tsx  DashboardHome.tsx  ShortingStrategies.tsx  StrategyTester.tsx
frontend/components/ui/: badge.tsx  button.tsx  progress.tsx
frontend/lib/: api.ts
haskell-strategy-engine/: lynxtrader-strategy-engine.cabal  package.yaml  stack.yaml
haskell-strategy-engine/app/: Main.hs
haskell-strategy-engine/src/LynxTrader/: LynxDSL.hs  Types.hs
haskell-strategy-engine/src/LynxTrader/RiskManagement/: AIRiskOverlay.hs
haskell-strategy-engine/src/LynxTrader/Strategies/: DayTradingStrategies.hs  ScalpingStrategies.hs  SmartMoneyStrategies.hs
haskell-strategy-engine/test/: Spec.hs
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/api/: mod.rs  strategies.rs
rust-backend/src/strategies/: mod.rs
strategy-engine/: lynx-dsl.cabal
strategy-engine/app/: Main.hs
strategy-engine/src/: LynxDSL.hs
strategy-engine/src/LynxDSL/: Builder.hs  Engine.hs  Indicators.hs  ShortingStrategies.hs  Types.hs
