[package]
name = "lynxtrader-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Trading & Finance
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Configuration
config = "0.14"
dotenv = "0.15"

# Broker APIs (will need specific broker SDKs)
# Note: These might need to be added as git dependencies or custom implementations
# alpaca-rs = { git = "https://github.com/alpacahq/alpaca-trade-api-rust" }
# ib-rs = { git = "https://github.com/interactive-brokers/ib-rs" }

[dev-dependencies]
tokio-test = "0.4" 