[package]
name = "lynx-trader-backend"
version = "0.1.0"
edition = "2021"
authors = ["LynxTrader Team"]
description = "High-performance Rust backend for LynxTrader algorithmic trading platform"
license = "MIT"
repository = "https://github.com/your-username/LynxTrader"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration management
config = "0.13"
dotenvy = "0.15"

# Cryptography and security
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Mathematical calculations
nalgebra = "0.32"
statrs = "0.16"

# Performance and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# WebSocket support for real-time data
tokio-tungstenite = "0.20"
futures-util = "0.3"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.0"

[profile.release]
# Optimize for performance in production
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "lynx-trader-backend"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"] 