cabal-version: 2.2

name:           lynx-dsl
version:        0.1.0.0
description:    LynxTrader Strategy DSL - Embedded Domain Specific Language for algorithmic trading strategies
homepage:       https://github.com/lynxtrader/lynx-dsl
license:        MIT
license-file:   LICENSE
author:         LynxTrader Team
maintainer:     team@lynxtrader.com
copyright:      2024 LynxTrader
category:       Finance
build-type:     Simple

extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      LynxDSL
      LynxDSL.Core
      LynxDSL.Strategy
      LynxDSL.Indicators
      LynxDSL.BackTest
      LynxDSL.Parser
      LynxDSL.Compiler
      LynxDSL.Types
      LynxDSL.Risk
      
  other-modules:
      Paths_lynx_dsl
      
  hs-source-dirs:
      src
      
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , containers
    , vector
    , time
    , scientific
    , aeson
    , yaml
    , parsec
    , megaparsec >=9.0
    , parser-combinators
    , transformers
    , mtl
    , monad-control
    , exceptions
    , lens
    , pretty-simple
    , conduit
    , conduit-extra
    , resourcet
    , stm
    , async
    , safe
    , filepath
    , directory
    
  default-language: Haskell2010
  
  ghc-options: 
    -Wall 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wmissing-export-lists 
    -Wmissing-home-modules 
    -Wpartial-fields 
    -Wredundant-constraints

executable lynx-dsl-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lynx-dsl
    , optparse-applicative
    , text
    
  default-language: Haskell2010

test-suite lynx-dsl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lynx-dsl
    , hspec
    , QuickCheck
    , hspec-discover
    
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lynxtrader/lynx-dsl 