cabal-version: 2.2

name:           lynx-dsl
version:        0.1.0.0
description:    LynxTrader Strategy DSL - Embedded Domain Specific Language for algorithmic trading strategies
homepage:       https://github.com/lynxtrader/lynx-dsl
license:        MIT
author:         LynxTrader Team
maintainer:     team@lynxtrader.com
copyright:      2024 LynxTrader
category:       Finance
build-type:     Simple

extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      LynxDSL
      LynxDSL.Types
      LynxDSL.Engine
      LynxDSL.Builder
      LynxDSL.Indicators
      LynxDSL.ShortingStrategies
      
  other-modules:
      Paths_lynx_dsl
      
  hs-source-dirs:
      src
      
  build-depends:
      base >=4.7 && <5
    , text
    , containers
    , time
    
  default-language: Haskell2010
  
  ghc-options: -Wall

executable lynx-dsl-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lynx-dsl
    , text
    , time
    
  default-language: Haskell2010

test-suite lynx-dsl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lynx-dsl
    , hspec
    , QuickCheck
    , hspec-discover
    
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lynxtrader/lynx-dsl 